<resources>
    <string name="app_name">Your Time</string>
    <string name="title_activity_maps">Your Time</string>
    <string name="consumer_action_settings">Settings</string>
    <string name="yourtime">YourTime</string>
    <string name="save_time">Save Time</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="book">Book</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="action">Action</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pin_code">Pin Code</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address_line1">Address Line1</string>
    <string name="address_line2">Address Line2</string>
    <string name="phone">Phone Number</string>
    <string name="forgot_password">Already a member? Sign in</string>
    <string name="service_type">Service Type</string>
    <string name="title_activity_isp_home">Your Schedules</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="post">POST</string>
    <string name="get">GET</string>
    <string name="ws_method">method</string>
    <string name="ws_param">param</string>
    <string name="ws_url">URL</string>
    <string name="static_service_type">SERVICE_TYPE</string>
    <string name="sno">S#</string>
    <string name="mobile">Mobile</string>
    <string name="phonenumber">Phone Number</string>
    <string name="username">Username</string>
    <string name="p_header">HEADER</string>
    <string name="label_btn_find">Find</string>
    <string name="search_text">Enter text to search</string>
    <string name="search">Search</string>
    <string name="address">Address</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_time">Booking Time</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_book">Continue Book</string>
    <string name="booking_reason">Reason</string>
    <string name="title_activity_consumer_home">Your appointments</string>
    <string name="caller">caller</string>
    <string name="consumer_action_book">Book</string>
    <string name="consumer_action_logout">Logout</string>
    <string name="isp_action_settings">Settings</string>
    <string name="isp_action_logout">Logout</string>
    <string name="service">Service</string>
    <string name="waitTime">Wait Time</string>
    <string name="consumer_action_home">Home</string>
    <string name="booking_processing_message">Please wait while we book your appointment...</string>
    <string name="booking_update_processing_message">Please wait while we update your appointment...</string>
    <string name="your_booking_confirmed_message">Your appointment is booked</string>
    <string name="your_schedule_confirmed_message">Your schedule is done</string>
    <string name="are_you_isp">Are you service provider?</string>
    <string name="user_acc_creating_message">Creating Account...</string>
    <string name="user_creation_success_message">Created user</string>
    <string name="param_service_provider_id">serviceProviderId</string>
    <string name="param_status">status</string>
    <string name="param_message">message</string>
    <string name="consumer_action_home_profile">My Profile</string>
    <string name="consumer_action_home_appointment">My Appointment</string>
    <string name="consumer_action_book_home_history">All Appointment</string>
    <string name="consumer_action_book_profile">My Profile</string>
    <string name="consumer_action_book_appointment">My Appointment</string>
    <string name="consumer_action_book_history">Appointment History</string>
    <string name="consumer_action_book_settings">Settings</string>
    <string name="consumer_action_home_history">Appointment History</string>
    <string name="consumer_action_setting_profile">My Profile</string>
    <string name="consumer_action_setting_appointment">My Appointment</string>
    <string name="consumer_action_setting_history">Appointment History</string>
    <string name="my_schedules">My Schedules</string>
    <string name="isp_action_home_profile">My Profile</string>
    <string name="isp_action_home_add_schedule">Add Schedule</string>
    <string name="isp_action_home_history">Schedule History</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="consumer_action_appointment_history">Appointment History</string>
    <string name="consumer_action_appointment_appointment">My Appointment</string>
    <string name="consumer_action_appointment_profile">My Profile</string>
    <string name="actAs">actAs</string>
    <string name="booking_onbehalfof">On Behalf Of</string>
    <string name="schedule_processing_message">Please wait while we process your schedule...</string>
    <string name="schedule_update_processing_message">Please wait while we update your schedule...</string>
    <string name="home">Home111</string>
    <string name="my_profile">My Profile</string>
    <string name="my_appointments">My Appointment</string>
    <string name="appointment_history">Appointment History</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="schedule_history">Schedule History</string>
    <string name="param_booking_id">_id</string>
    <string name="param_result">result</string>
    <string name="gws_nearby_search">https://maps.googleapis.com/maps/api/place/nearbysearch/json</string>
    <string name="gws_search">https://maps.googleapis.com/maps/api/place/search/json</string>
    <string name="gws_nearby_textsearch">https://maps.googleapis.com/maps/api/place/textsearch/json</string>
    <string name="gws_param_key">key</string>
    <string name="gws_param_location">location</string>
    <string name="gws_param_address">address</string>
    <string name="gws_param_types">types</string>
    <string name="gws_param_radius">radius</string>
    <string name="gws_param_sensor">sensor</string>
    <string name="WS_AUTHENDICATE">http://192.168.137.1:8080/YourTime/users/authendicate</string>
    <string name="WS_HOME">http://192.168.137.1:8080/YourTime/users/all</string>
    <string name="WS_SIGN_UP">http://192.168.137.1:8080/YourTime/users/signup</string>
    <string name="WS_UPDATE_USER_PROFILE">http://192.168.137.1:8080/YourTime/users/profile/update</string>
    <string name="WS_FETCH_ANY_ACTIVE_TYPE">http://192.168.137.1:8080/YourTime/static/any/active</string>
    <string name="WS_BOOK_APPOINTMENT">http://192.168.137.1:8080/YourTime/book/consumer/appointment/create</string>
    <string name="WS_VIEW_APPOINTMENT_DETAILS">http://192.168.137.1:8080/YourTime/book/consumer/appointment/view</string>
    <string name="WS_ALL_APPOINTMENTS_BY_CONSUMER">http://192.168.137.1:8080/YourTime/book/consumer/appointment/list/all</string>
    <string name="WS_ALL_ACTIVE_APPOINTMENTS_BY_CONSUMER">http://192.168.137.1:8080/YourTime/book/consumer/appointment/list/active</string>
    <string name="WS_APPOINTMENT_CANCEL_BY_CONSUMER">http://192.168.137.1:8080/YourTime/book/consumer/appointment/cancel</string>
    <string name="WS_APPOINTMENT_RESCHEDULE_BY_CONSUMER">http://192.168.137.1:8080/YourTime/book/consumer/appointment/reschedule</string>
    <string name="WS_CREATE_SCHEDULE_BY_ISP">http://192.168.137.1:8080/YourTime/book/isp/schedule/create</string>
    <string name="WS_VIEW_SCHEDULE_DETAILS_BY_ISP">http://192.168.137.1:8080/YourTime/book/isp/schedule/view</string>
    <string name="WS_ALL_SCHEDULES_BY_ISP">http://192.168.137.1:8080/YourTime/book/isp/schedule/list/all</string>
    <string name="WS_ALL_ACTIVE_SCHEDULES_BY_ISP">http://192.168.137.1:8080/YourTime/book/isp/schedule/list/active</string>
    <string name="WS_ALL_SCHEDULES_DONE_BY_ISP">http://192.168.137.1:8080/YourTime/book/isp/schedule/list/isp</string>
    <string name="WS_ALL_ACTIVE_SCHEDULES_DONE_BY_ISP">http://192.168.137.1:8080/YourTime/book/isp/schedule/list/isp</string>
    <string name="WS_SCHEDULE_CANCEL_BY_ISP">http://192.168.137.1:8080/YourTime/book/isp/schedule/cancel</string>
    <string name="WS_SCHEDULE_RESCHEDULE_BY_ISP">http://192.168.137.1:8080/YourTime/book/isp/schedule/reschedule</string>
    <string name="WS_SCHEDULE_CONFIRM_BY_ISP">http://192.168.137.1:8080/YourTime/book/isp/schedule/confirm</string>
    <string name="param_results">results</string>
    <string name="your_time_says">YourTime says</string>
    <string name="question_on_click_grid_reschedule_cancel">What do you want to perform?</string>
    <string name="appointment_cancel_success">Your appointment was cancelled successfully</string>
    <string name="reschedule">Reschedule</string>
    <string name="okay">Okay</string>
    <string name="schedule_cancel_success">Your schedule was cancelled successfully</string>
    <string name="enter_valid_username">Enter a valid username</string>
    <string name="password_constraints">Password must be between 3 and 10 alphanumeric characters</string>
    <string name="failed_fetching_details">Unable to get the details, Please try login again.</string>
    <string name="authendication_progress_msg">Authenticating...</string>
    <string name="default_role_user">User</string>
    <string name="login_failed">Login failed</string>
    <string name="want_logout_question">Do you want to logout?</string>
    <string name="title_activity_consumer_settings">Settings</string>
    <string name="title_activity_isp_settings">Settings</string>
    <string name="consumer_appointment_cancel_success">Your appointment was cancelled successfully</string>
    <string name="isp_schedule_cancel_success">Your schedule was cancelled successfully</string>
    <string name="isp_schedule_confirm_success">Your schedule was confirmed successfully</string>
    <string name="cancel_book">Submit</string>
    <string name="title_activity_template">TemplateActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="status">Status</string>
    <string name="service_detail">Service Details</string>
</resources>