<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.your.time.activity.ConsumerAppointmentActivity">
    <group
        android:id="@+id/menu_group_consumer">
        <item
            android:id="@+id/consumer_action_home"
            android:orderInCategory="100"
            android:title="@string/home"
            app:showAsAction="never" />
        <item
            android:id="@+id/consumer_action_profile"
            android:orderInCategory="100"
            android:title="@string/my_profile"
            app:showAsAction="never" />
        <item
            android:id="@+id/consumer_action_appointment"
            android:orderInCategory="100"
            android:title="@string/my_appointments"
            app:showAsAction="never" />
        <item
            android:id="@+id/consumer_action_book"
            android:orderInCategory="100"
            android:title="@string/book"
            app:showAsAction="never" />
        <item
            android:id="@+id/consumer_action_history"
            android:orderInCategory="100"
            android:title="@string/appointment_history"
            app:showAsAction="never" />
        <item
            android:id="@+id/consumer_action_settings"
            android:orderInCategory="100"
            android:title="@string/settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/consumer_action_logout"
            android:orderInCategory="100"
            android:title="@string/logout"
            app:showAsAction="never"/>
    </group>

    <group
        android:id="@+id/menu_group_isp">
        <item
            android:id="@+id/isp_action_home"
            android:orderInCategory="100"
            android:title="@string/home"
            app:showAsAction="never" />
        <item
            android:id="@+id/isp_action_profile"
            android:orderInCategory="100"
            android:title="@string/my_profile"
            app:showAsAction="never" />
        <item
            android:id="@+id/isp_action_schedule"
            android:orderInCategory="100"
            android:title="@string/my_schedules"
            app:showAsAction="never" />
        <item
            android:id="@+id/isp_action_add_schedule"
            android:orderInCategory="100"
            android:title="@string/add_schedule"
            app:showAsAction="never" />
        <item
            android:id="@+id/isp_action_history"
            android:orderInCategory="100"
            android:title="@string/schedule_history"
            app:showAsAction="never" />
        <item
            android:id="@+id/isp_action_settings"
            android:orderInCategory="100"
            android:title="@string/settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/isp_action_logout"
            android:orderInCategory="100"
            android:title="@string/logout"
            app:showAsAction="never" />
    </group>
</menu>
