<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <TextView
        android:id="@+id/homeHdrNo"
        android:layout_width="2dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:text="@string/sno"
        android:layout_weight="0.16" />
    <TextView
        android:id="@+id/homeHdrName"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:text="@string/name"
        android:layout_weight="0.32" />
    <TextView
        android:id="@+id/homeHdrMobile"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:text="@string/mobile"
        android:layout_weight="0.25" />
    <TextView
        android:id="@+id/homeHdrAction"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:text="@string/action"
        android:layout_weight="0.13" />
</LinearLayout>