<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <TextView
        android:id="@+id/scheduleHdrNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:text="@string/sno"
        android:paddingLeft="5dp"
        android:layout_weight="0.16" />
    <TextView
        android:id="@+id/scheduleHdrName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:text="@string/name"
        android:paddingLeft="5dp"
        android:layout_weight="0.57" />
    <TextView
        android:id="@+id/scheduleHdrMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:text="@string/mobile"
        android:paddingLeft="5dp"
        android:layout_weight="0.23" />
    <TextView
        android:id="@+id/scheduleHdrAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:text="@string/action"
        android:paddingLeft="5dp"/>

</LinearLayout>