<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/lbl_yourtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPersonName"
        android:paddingBottom="10dp"
        android:text="@string/save_time"
        android:textColor="@color/green"
        android:textSize="20sp" />

    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/clock_circle"
        android:dial="@drawable/clock_circle"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/imageButtonSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/item_circle"
        android:gravity="center"
        android:onClick="signup"
        android:text="@string/sign_up"
        android:textAlignment="center"

        android:layout_below="@+id/lbl_yourtime"
        android:layout_toLeftOf="@+id/imageButtonBook"
        android:layout_toStartOf="@+id/imageButtonBook"
        android:layout_marginTop="52dp" />

    <TextView
        android:id="@+id/imageButtonSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/item_circle"
        android:gravity="center"
        android:onClick="signin"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/imageButtonSignup"
        android:layout_alignBottom="@+id/imageButtonSignup"
        android:layout_toRightOf="@+id/imageButtonBook"
        android:layout_toEndOf="@+id/imageButtonBook" />

    <TextView
        android:id="@+id/imageButtonBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/item_circle"
        android:gravity="center"
        android:onClick="bookSchedule"
        android:text="@string/book"
        android:layout_below="@+id/analogClock1"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
