<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <TextView
        android:id="@+id/consumerHomeHdrStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/SubTitleText"
        android:text="@string/status"
        android:layout_weight="0.01" />
    <TextView
        android:id="@+id/consumerHomeHdrService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:layout_marginLeft="15dip"
        android:textAppearance="@style/SubTitleText"
        android:text="@string/service_detail"
        android:layout_weight="0.7" />
    <!--<TextView
        android:id="@+id/consumerHomeHdrMobile"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:text="@string/mobile"
        android:layout_weight="0.25" />-->
    <TextView
        android:id="@+id/consumerHomeHdrWaitTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="14dp"
        android:textAppearance="@style/SubTitleText"
        android:text="@string/waitTime"
        android:layout_weight="0.29"
        android:gravity="right"/>
</LinearLayout>